--- a/Courseworks/res/values/strings.xml
+++ b/Courseworks/res/values/strings.xml
@@ -9,5 +9,8 @@
     <string name="action_settings">Settings</string>
     <string name="splash_desc">Columbia University Courseworks</string>
     <string name="remember_me">Remember me!</string>
+    <string name="title_activity_course_view">CourseView</string>
+    <string name="title_activity_announcement_view">AnnouncementView</string>
+    <string name="title_activity_calendar_view">CalendarView</string>
 
 </resources>
