--- a/Courseworks/res/values/strings.xml
+++ b/Courseworks/res/values/strings.xml
@@ -5,12 +5,13 @@
     <color name="columbia_blue">#6699CC</color>
     <color name="silver">#CCCCCC</color>
 
-    <string name="app_name">Courseworks</string>
     <string name="action_settings">Settings</string>
-    <string name="splash_desc">Columbia University Courseworks</string>
+    <string name="app_name">Courseworks</string>
+    <string name="home_page">Home</string>
     <string name="remember_me">Remember me!</string>
-    <string name="title_activity_course_view">CourseView</string>
-    <string name="title_activity_announcement_view">AnnouncementView</string>
-    <string name="title_activity_calendar_view">CalendarView</string>
+    <string name="splash_desc">Columbia University Courseworks</string>
+    <string name="title_activity_announcement_view">Announcements</string>
+    <string name="title_activity_calendar_view">Calendar</string>
+    <string name="title_activity_course_view">Courses</string>
 
 </resources>
