Adding Fragments and tabs into the design.

--- a/Courseworks/res/values/strings.xml
+++ b/Courseworks/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="title_activity_announcement_view">Announcements</string>
     <string name="title_activity_calendar_view">Calendar</string>
     <string name="title_activity_course_view">Courses</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
