--- a/Courseworks/res/values/strings.xml
+++ b/Courseworks/res/values/strings.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="white">#FFFFFF</color>
     <color name="columbia_blue">#6699CC</color>
     <color name="silver">#CCCCCC</color>
+    <color name="white">#FFFFFF</color>
 
+    <string name="action_search">Search</string>
     <string name="action_settings">Settings</string>
     <string name="app_name">Courseworks</string>
     <string name="home_page">Home</string>
     <string name="remember_me">Remember me!</string>
     <string name="splash_desc">Columbia University Courseworks</string>
+    <string name="search_title">Search</string>
     <string name="title_activity_announcement_view">Announcements</string>
     <string name="title_activity_calendar_view">Calendar</string>
     <string name="title_activity_course_view">Courses</string>
-    <string name="hello_world">Hello world!</string>
 
 </resources>
