--- a/Courseworks/res/values/strings.xml
+++ b/Courseworks/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="action_settings">Settings</string>
     <string name="app_name">Courseworks</string>
     <string name="home_page">Home</string>
-    <string name="remember_me">Remember me!</string>
+    <string name="remember_me">Remember Me</string>
     <string name="splash_desc">Columbia University Courseworks</string>
     <string name="search_title">Search</string>
     <string name="title_activity_announcement_view">Announcements</string>
