--- a/Courseworks/res/values/strings.xml
+++ b/Courseworks/res/values/strings.xml
@@ -2,13 +2,18 @@
 <resources>
 
     <color name="columbia_blue">#6699CC</color>
-    <color name="silver">#CCCCCC</color>
     <color name="white">#FFFFFF</color>
+    <color name="black_haze">#F1F2F2</color>
+    <color name="delta">#A1A094</color>
+    <color name="denim">#0F69AB</color>
+    <color name="iron">#DCDDDE</color>
+    <color name="shakespeare">#5CA8D6</color>
 
     <string name="action_search">Search</string>
     <string name="action_settings">Settings</string>
     <string name="app_name">Courseworks</string>
     <string name="home_page">Home</string>
+    <string name="logo_description">Courseworks logo</string>
     <string name="remember_me">Remember Me</string>
     <string name="splash_desc">Columbia University Courseworks</string>
     <string name="search_title">Search</string>
