--- a/Courseworks/res/values/strings.xml
+++ b/Courseworks/res/values/strings.xml
@@ -3,11 +3,11 @@
 
     <color name="columbia_blue">#6699CC</color>
     <color name="white">#FFFFFF</color>
-    <color name="black_haze">#F1F2F2</color>
-    <color name="delta">#A1A094</color>
-    <color name="endeavour">#0167AD</color>
-    <color name="iron">#DCDDDE</color>
-    <color name="viking">#69B6DF</color>
+    <color name="light_grey">#F3F4F4</color>
+    <color name="light_brown">#A1A094</color>
+    <color name="dark_blue">#0167AD</color>
+    <color name="dark_grey">#DCDDDE</color>
+    <color name="light_blue">#69B6DF</color>
 
     <string name="action_search">Search</string>
     <string name="action_settings">Settings</string>
