I was able to get the Session cookie. So let's connect this all together.

--- a/Courseworks/res/values/strings.xml
+++ b/Courseworks/res/values/strings.xml
@@ -19,5 +19,7 @@
     <string name="title_activity_announcement_view">Announcements</string>
     <string name="title_activity_calendar_view">Calendar</string>
     <string name="title_activity_course_view">Courses</string>
+    <string name="title_activity_hidden_web_view">HiddenWebView</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
