--- a/Courseworks/res/values/strings.xml
+++ b/Courseworks/res/values/strings.xml
@@ -4,9 +4,9 @@
     <color name="columbia_blue">#6699CC</color>
     <color name="white">#FFFFFF</color>
     <color name="light_gray">#F1F2F2</color>
-    <color name="text_blue">#0167AD</color>
+    <color name="dark_blue">#0167AD</color>
     <color name="dark_gray">#939598</color>
-    <color name="sign_in_blue">#59A7D8</color>
+    <color name="light_blue">#59A7D8</color>
 
     <string name="action_search">Search</string>
     <string name="action_settings">Settings</string>
