--- a/Courseworks/res/values/strings.xml
+++ b/Courseworks/res/values/strings.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <color name="black">#333333</color>
     <color name="columbia_blue">#6699CC</color>
     <color name="white">#FFFFFF</color>
     <color name="light_gray">#F1F2F2</color>
     <color name="dark_blue">#0167AD</color>
     <color name="dark_gray">#939598</color>
     <color name="light_blue">#59A7D8</color>
+    <color name="announcement_blue">#4181A3</color>
 
     <string name="action_search">Search</string>
     <string name="action_settings">Settings</string>
