37: Create Network Dialog
Task-Url:
https://github.com/aisaacroth/CourseWorksAndroid/issues/issue/37 Created
the dialog activity for when a network connection has an error.

--- a/Courseworks/res/values/strings.xml
+++ b/Courseworks/res/values/strings.xml
@@ -27,5 +27,6 @@
     <string name="title_activity_past_course_list_view">PastCourseListView</string>
     <string name="title_activity_current_course_list_view">CurrentCourseListView</string>
     <string name="title_activity_next_course_list_view">NextCourseListView</string>
+    <string name="title_activity_network_dialog">NetworkDialog</string>
 
 </resources>
